# ollama-websearch-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
config/: mcporter.json
src/ollama_websearch_mcp/: __init__.py  server.py
tests/: test_server.py
